// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaletteCard should match the snapshot when locked is false 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="palette-article"
      >
        <div
          class="palette-info-container"
        >
          <section
            class="lock-button-section"
            role="update-palette=locked"
            tabindex="1"
          >
            <img
              alt="lock icon"
              class="lock-button-image"
              src="unlock.png"
            />
          </section>
          <section
            class="hex-code-section"
          >
            <p
              class="hex-p"
            >
              #11111
            </p>
          </section>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="palette-article"
    >
      <div
        class="palette-info-container"
      >
        <section
          class="lock-button-section"
          role="update-palette=locked"
          tabindex="1"
        >
          <img
            alt="lock icon"
            class="lock-button-image"
            src="unlock.png"
          />
        </section>
        <section
          class="hex-code-section"
        >
          <p
            class="hex-p"
          >
            #11111
          </p>
        </section>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PaletteCard should match the snapshot when locked is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="palette-article"
      >
        <div
          class="palette-info-container"
        >
          <section
            class="lock-button-section"
            role="update-palette=locked"
            tabindex="1"
          >
            <img
              alt="lock icon"
              class="lock-button-image"
              src="lock.png"
            />
          </section>
          <section
            class="hex-code-section"
          >
            <p
              class="hex-p"
            >
              #11111
            </p>
          </section>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="palette-article"
    >
      <div
        class="palette-info-container"
      >
        <section
          class="lock-button-section"
          role="update-palette=locked"
          tabindex="1"
        >
          <img
            alt="lock icon"
            class="lock-button-image"
            src="lock.png"
          />
        </section>
        <section
          class="hex-code-section"
        >
          <p
            class="hex-p"
          >
            #11111
          </p>
        </section>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
